fix: Collectors to list in the back and some refacto in the front